--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,36 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
+    <nav class="nav">
+        <div class="logo">
+            <a href="#">
+                <img src="https://images.ctfassets.net/q5ulk4bp65r7/3TBS4oVkD1ghowTqVQJlqj/2dfd4ea3b623a7c0d8deb2ff445dee9e/Consumer_Wordmark.svg" alt="logo de coinbase">
+            </a>
+        </div>
 
-    
+        <div class="menu">
+            <ul class="main-menu">
+                <li><a href="#">Prices</a></li>
+                <li><a href="#">Learn</a></li>
+                <li><a href="#">Individuals</a></li>
+                <li><a href="#">Businesses</a></li>
+                <li><a href="#">Developers</a></li>
+                <li><a href="#">Company</a></li>
+            </ul>
+        </div>
+
+        <div class="get-started">
+            <button class="btn-sec-s">Sign in</button>
+            <button class="btn-main-s">Get started</button>
+        </div>
+    </nav>
+    <section class="sec-home"></section>
+    <section class="sec-call-to-action"></section>
+    <section class="sec-features"></section>
+    <section class="sec-benefits"></section>
+    <section class="sec-kpis"></section>
+    <section class="sec-onboarding"></section>
+    <footer class="sec-footer-cta"></footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
