--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
             </a>
         </div>
 
-        <div class="menu">
+        <div class="menu d-none d-md-block">
             <ul class="main-menu">
                 <li><a href="#">Prices</a></li>
                 <li><a href="#">Learn</a></li>
@@ -33,6 +33,7 @@
             <button class="btn-main-s">Get started</button>
         </div>
     </nav>
+
     <section class="sec-home">
         <div class="home-cta">
             <div class="cta-text">
@@ -54,9 +55,56 @@
             <img src="../assets/img/Wallet.png" alt="wallet">
         </div>
     </section>
-    <section class="sec-call-to-action"></section>
-    <section class="sec-features"></section>
-    <section class="sec-benefits"></section>
+    
+    <section class="sec-features">
+        <div class="intro">
+            <h3>Create your cryptocurrency portfolio today.</h3>
+            <p>coinbase has a variety of features that make it the best place to start trading.</p>
+        </div>
+
+        <div class="features">
+            <div class="text">
+                <div class="feature">
+                    <span class="icon-sm">
+                        <i class="bi bi-graph-up"></i>
+                    </span>
+                    <div class="description">
+                        <h4 class="description-title">Manage your portfolio</h4>
+                        <p class="description-text">Buy and sell popular digital currencies, keep track of them in the one place.</p>
+                    </div>
+                </div>
+
+                <div class="feature">
+                    <span class="icon-sm">
+                        <i class="bi bi-calendar"></i>
+                    </span>
+                    <div class="description">
+                        <h4 class="description-title">Recurring buys</h4>
+                        <p class="description-text">Invest in cryptocurrency slowly over time by scheduling buys daily, weekly, or monthy.</p>
+                    </div>
+                </div>
+
+                <div class="feature">
+                    <span class="icon-sm">
+                        <i class="bi bi-phone"></i>
+                    </span>
+                    <div class="description">
+                        <h4 class="description-title">Mobile apps</h4>
+                        <p class="description-text">Stay on top of the markets with the Coinbase app for Android or iOS.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="image">
+                <img src="../assets/img/Chart.png" alt="chart">
+            </div>
+        </div>
+    </section>
+
+    <section class="sec-benefits">
+        
+    </section>
+
     <section class="sec-kpis"></section>
     <section class="sec-onboarding"></section>
     <footer class="sec-footer-cta"></footer>
