--- a/html/index.html
+++ b/html/index.html
@@ -43,15 +43,15 @@
             <h2 class="home-title h1">Jump start your crypto portfolio</h2>
             <p class="home-description h6">Coinbase is the easiest place to buy and sell cryptocurrency. Sign up and get started today.</p>
             <div class="lead-magnet row align-items-center">
-                <div class="col">
-                    <input type="text" class="form-control" placeholder="Email address">
+                <div class="col input-col">
+                    <input type="text" class="form-control input-text" placeholder="Email address">
                 </div>
                 <div class="col">
                     <button class="btn-main">Get started</button>
                 </div>
             </div>
         </div>
-        <div class="home-img">
+        <div class="home-img d-none d-md-block">
             <img src="../assets/img/Wallet.png" alt="wallet">
         </div>
     </section>
@@ -95,19 +95,100 @@
                 </div>
             </div>
 
-            <div class="image">
+            <div class="image d-none d-md-block">
                 <img src="../assets/img/Chart.png" alt="chart">
             </div>
         </div>
     </section>
 
     <section class="sec-benefits">
-        
+        <div class="intro">
+            <h3>The most trusted cryptocurrency platform</h3>
+            <p>Here are a few reasons why you should choose Coinbase</p>
+        </div>
+
+        <div class="benefits-cards row">
+            <div class="benefit col-md">
+                <i class="bi bi-eye-fill icon"></i>
+                <div class="description">
+                    <h4 class="title">Secure storage</h4>
+                    <p class="text">We store the vast majority of the digital assets in secure offline storage.</p>
+                </div>
+                <div class="cta">
+                    Learn how Coinbase keeps your funds safe and secure
+                </div>
+            </div>
+
+            <div class="benefit col-md">
+                <i class="bi bi-envelope-fill icon"></i>
+                <div class="description">
+                    <h4 class="title">Protected by insurance</h4>
+                    <p class="text">Coinbase maintains crypto insurance and all USD cash balances are covered by FDIC insurance, up to a macimum of $250,000.</p>
+                </div>
+                <div class="cta">
+                    Learn how Coinbase keeps your funds safe and secure
+                </div>
+            </div>
+
+            <div class="benefit col-md">
+                <i class="bi bi-shield-shaded icon"></i>
+                <div class="description">
+                    <h4 class="title">Industry best practices</h4>
+                    <p class="text">Coinbase supports a variety of the most popular digital currencies.</p>
+                </div>
+                <div class="cta">
+                    Learn how Coinbase keeps your funds safe and secure
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section class="sec-kpis"></section>
-    <section class="sec-onboarding"></section>
-    <footer class="sec-footer-cta"></footer>
+    <section class="sec-kpis row">
+        <div class="kpi col-md">
+            <span class="number">$547B</span>
+            <span class="desc">Quarterly volume traded</span>
+        </div>
+        <div class="kpi col-md">
+            <span class="number">100+</span>
+            <span class="desc">Countries supported</span>
+        </div>
+        <div class="kpi col-md">
+            <span class="number">89+M</span>
+            <span class="desc">Verified users</span>
+        </div>
+    </section>
+
+    <section class="sec-onboarding">
+        <div class="intro">
+            <h3>Get started in a few minutes</h3>
+            <p>Coinbase supports a variety of the most popular digital currencies</p>
+        </div>
+
+        <div class="steps">
+            <div class="icon-desc">
+                <i class="bi bi-person-plus-fill icon"></i>
+                <h4 class="title">Create an account</h4>
+            </div>
+            <div class="step-separator"></div>
+            <div class="icon-desc">
+                <i class="bi bi-bank icon"></i>
+                <h4 class="title">Create an account</h4>
+            </div>
+            <div class="step-separator"></div>
+            <div class="icon-desc">
+                <i class="bi bi-coin icon"></i>
+                <h4 class="title">Create an account</h4>
+            </div>
+        </div>
+    </section>
+
+    <footer class="sec-footer-cta">
+        <div class="footer-cta">
+            <h4 class="cta-title">Earn Up to $7 worth of crypto</h4>
+            <p class="cta-description">Discover how specific cryptocurrencies work - and get a bit of each crypto to try out for yourself.</p>
+            <button class="btn-main">Start earning</button>
+        </div>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
